--- a/Chat-3/client/src/assets/styles/style.scss
+++ b/Chat-3/client/src/assets/styles/style.scss
@@ -7,4 +7,17 @@ ul {
 	list-style-type: none;
 }
 
+.noname-wrap {
+	text-align: center;
+	padding: 30px;
+	font-size: 23px;
+
+	& button {
+		font-size: 20px;
+		padding: 5px 25px;
+		margin-top: 20px;
+		border-radius: 0;
+	}
+}
+
 @import 'chat';
